tests/outref/TAK05.ref

select id from names as "n1";
select id from names as "n2";
select id from names as 'lmo';
select id from names as 'klm';
ID
0
1
2
3
4
5
(6 rows)
ID
0
1
2
3
4
5
(6 rows)
LINE 4:1: select id from names as 'lmo';
                                  ^^^^^
syntax error, unexpected LITERAL, expecting IDENTIFIER_ALONE or IDENTIFIER_BACK_TICK or DOUBLE_QUOTE_LITERAL
LINE 5:1: select id from names as 'klm';
                                  ^^^^^
syntax error, unexpected LITERAL, expecting IDENTIFIER_ALONE or IDENTIFIER_BACK_TICK or DOUBLE_QUOTE_LITERAL
